--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 <html>
+
 <head>
+    <title>Roleplay: Home</title>
+</head>
+<body>
+    <p>I made this because at some point I will lose access to my school account and will no longer be able to update the list of characters on the Roleplay website.</p>
+    <p>Since everyone in the world technically has access to this site (I can&rsquo;t just add some sort of login system), instead of using your names, I will just use the prefixes from Flintface&rsquo;s warrior names that she gave us.</p>
+</body>
