--- a/navigation.html
+++ b/navigation.html
@@ -3,17 +3,17 @@
 	<head>
 		<meta charset = "utf-8" >
 		<title>Navigation</title>
-		<link rel = "stylesheet" type = "text/css" href = "https://leafpool243.github.io/site/style.css" />
+		<link rel = "stylesheet" type = "text/css" href = "https://leafpool243.github.io/roleplay/style.css" />
 	</head>
 	<body>
 		<div id = "navigation" >
 			<h2>Navigation</h2>
 			<p>
-				<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/site" >Home</a><br>
-				<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/site/about" >About me</a><br>
-				<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/site/testing" >Testing</a><br>
-				&emsp;<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/site/testing/subpage" >Subpage</a><br>
-				<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/site/template" ></a>
+				<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay" >Home</a><br>
+				<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay/about" >About me</a><br>
+				<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay/testing" >Testing</a><br>
+				&emsp;<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay/testing/subpage" >Subpage</a><br>
+				<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay/template" ></a>
 			</p>
 		</div>
 	</body>
