Added CSS to homepage

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <head>
     <title>Roleplay: Home</title>
+    <meta charset = "utf-8" >
+    <link rel = "stylesheet" type = "text/css" href = "https://leafpool243.github.io/roleplay/style.css" />
 </head>
 
 <body>
