--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="navigation">
-        <iframe src="https://leafpool243.github.io/site/navigation.html" frameborder="0"
+        <iframe src="https://leafpool243.github.io/roleplay/navigation.html" frameborder="0"
             style="height: 100vh; width: 175px;">
         </iframe>
     </div>
