--- a/navigation.html
+++ b/navigation.html
@@ -9,11 +9,9 @@
 		<div id = "navigation" >
 			<h2>Navigation</h2>
 			<p>
-				<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay" >Home</a><br>
-				<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay/about" >About me</a><br>
-				<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay/testing" >Testing</a><br>
-				&emsp;<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay/testing/subpage" >Subpage</a><br>
-				<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay/template" ></a>
+                <a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay" >Home</a><br>
+                Clans<br>
+				&emsp;<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay/clans/cloudclan" >CloudClan</a><br>
 			</p>
 		</div>
 	</body>
