--- a/clans/cloudclan.html
+++ b/clans/cloudclan.html
@@ -17,4 +17,12 @@
     <h1 class = "head1">CloudClan</h1>
 
     <h2 class = "head2">Allegiances</h2>
+
+    <h3 class = "head3">Leader</h3>
+    <p><b>Whitestar (Amber)&mdash;</b>albino she-cat with blue eyes</p>
+    <p>&emsp;<b>Mate:</b> Dewleaf</p>
+
+    <h3 class = "head3">Deputy</h3>
+    <p><b>Beewing (Oak)&mdash;</b>pale yellow she-cat with dark stripes</p>
+    <p>&emsp;<b>Mate:</b> Skyclaw</p>
 </body>
