--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Roleplay: Home</title>
-    <meta charset = "utf-8" >
-    <link rel = "stylesheet" type = "text/css" href = "https://leafpool243.github.io/roleplay/style.css" />
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="https://leafpool243.github.io/roleplay/style.css" />
 </head>
 
 <body>
@@ -19,4 +19,6 @@
     <p>Since everyone in the world technically has access to this site (I can&rsquo;t just add some sort of login
         system), instead of using your names, I will just use the prefixes from Flintface&rsquo;s warrior names that she
         gave us.</p>
+    <p>I&rsquo;m not very good at this HTML and CSS thing, so this site is going to remain looking like this for the
+        forseeable future.</p>
 </body>
