--- a/clans/cloudclan.html
+++ b/clans/cloudclan.html
@@ -25,4 +25,23 @@
     <h3 class = "head3">Deputy</h3>
     <p><b>Beewing (Oak)&mdash;</b>pale yellow she-cat with dark stripes</p>
     <p>&emsp;<b>Mate:</b> Skyclaw</p>
+
+    <h3 class = "head3">Medicine Cat</h3>
+    <p><b>Stormcloud (Amber)&mdash;</b>dark gray genderfluid cat with light gray paws, green eyes, and white diamond shape on their chest</p>
+
+    <h3 class = "head3">Warriors</h3>
+    <p><b>Skyclaw (Amber)&mdash;</b>gray tom with green eyes</p>
+    <p>&emsp;<b>Mate:</b> Beewing</p>
+
+    <p><b>Dawnfur (Tall)&mdash;</b>dark purple she-cat with amber eyes</p>
+
+    <p><b>Stormsky (Thomas)&mdash;</b>light gray tabby with pale blue eyes</p>
+
+    <p><b>Smallclaw (Vixen)&mdash;</b>black tom with blue eyes and small claws</p>
+
+    <p><b>Moorclaw (Cherry)&mdash;</b></p>
+
+    <p><b>&mdash;</b></p>
+
+    <p><b>&mdash;</b></p>
 </body>
