--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p>Since everyone in the world technically has access to this site (I can&rsquo;t just add some sort of login
         system), instead of using your names, I will just use the prefixes from Flintface&rsquo;s warrior names that she
         gave us.</p>
+        <p>PLEASE tell me on the Announcements Padlet if I make a mistake.</p>
     <p>I&rsquo;m not very good at this HTML and CSS thing, so this site is going to remain looking like this for the
         forseeable future.</p>
 </body>
