Added characters on CloudClan

--- a/clans/cloudclan.html
+++ b/clans/cloudclan.html
@@ -39,7 +39,32 @@
 
     <p><b>Smallclaw (Vixen)&mdash;</b>black tom with blue eyes and small claws</p>
 
-    <p><b>Moorclaw (Cherry)&mdash;</b></p>
+    <p><b>Moorclaw (Cherry)&mdash;</b>brown tom with sandy brown spots</p>
+
+    <p><b>Lilyflower (Oak)&mdash;</b>pretty silver tabby she-cat with blue eyes and a scar on her leg</p>
+
+    <p><b>Emeraldblaze (Moss)&mdash;</b>gry she-cat with dark brown, light brown patches, light brown on one ear, dark brown on other, dark gray tail tip, and green eyes</p>
+
+    <p><b>Silverfeather (Mocha)&mdash;</b>white and black she-cat with one red eye and one blue eye</p>
+
+    <p><b>Talllizard (Flint)&mdash;</b>dark ginger tom with unusually long legs, a thin tail, long claws, and white markings that look like a lizard on left shoulder</p>
+
+    <p><b>Dewleaf (Vixen)&mdash;</b>gray tom with white paws and ginger specks on his face and tail, black tail, and green eyes</p>
+    <p>&mdash;<b>Mate:</b> Whitestar</p>
+
+    <p><b>Tigersnow (Flint)&mdash;</b>ginger she-cat with black stripes on her back and tail, white tail tip, white cheeks, small white freckles on muzzle and ears, and grreen eyes</p>
+
+    <p><b>Slashclaw (Mossbreeze)&mdash;</b>small white tom</p>
+
+    <p><bLilacflower (Sage)>&mdash;</b>pale gray she-cat with violet eyes</p>
+
+    <p><b>Twighlightsky (Oak)&mdash;</b>black tabby she-cat with white muzzle, paws, chest, and tip of her tail.</p>
+
+    <p><b>&mdash;</b></p>
+
+    <p><b>&mdash;</b></p>
+
+    <p><b>&mdash;</b></p>
 
     <p><b>&mdash;</b></p>
 
