--- a/clans/cloudclan.html
+++ b/clans/cloudclan.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>Roleplay: Clans: CloudClan</title>
-    <meta charset = "utf-8" >
-    <link rel = "stylesheet" type = "text/css" href = "https://leafpool243.github.io/roleplay/style.css" />
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="https://leafpool243.github.io/roleplay/style.css" />
 </head>
 
 <body>
@@ -14,22 +14,24 @@
         </iframe>
     </div>
 
-    <h1 class = "head1">CloudClan</h1>
+    <h1 class="head1">CloudClan</h1>
 
-    <h2 class = "head2">Allegiances</h2>
+    <h2 class="head2">Allegiances</h2>
 
-    <h3 class = "head3">Leader</h3>
+    <h3 class="head3">Leader</h3>
     <p><b>Whitestar (Amber)&mdash;</b>albino she-cat with blue eyes</p>
     <p>&emsp;<b>Mate:</b> Dewleaf</p>
 
-    <h3 class = "head3">Deputy</h3>
+    <h3 class="head3">Deputy</h3>
     <p><b>Beewing (Oak)&mdash;</b>pale yellow she-cat with dark stripes</p>
     <p>&emsp;<b>Mate:</b> Skyclaw</p>
 
-    <h3 class = "head3">Medicine Cat</h3>
-    <p><b>Stormcloud (Amber)&mdash;</b>dark gray genderfluid cat with light gray paws, green eyes, and white diamond shape on their chest</p>
+    <h3 class="head3">Medicine Cat</h3>
+    <p><b>Stormcloud (Amber)&mdash;</b>dark gray genderfluid cat with light gray paws, green eyes, and white diamond
+        shape on their chest</p>
 
-    <h3 class = "head3">Warriors</h3>
+    <h3 class="head3">Warriors</h3>
+
     <p><b>Skyclaw (Amber)&mdash;</b>gray tom with green eyes</p>
     <p>&emsp;<b>Mate:</b> Beewing</p>
 
@@ -43,30 +45,41 @@
 
     <p><b>Lilyflower (Oak)&mdash;</b>pretty silver tabby she-cat with blue eyes and a scar on her leg</p>
 
-    <p><b>Emeraldblaze (Moss)&mdash;</b>gry she-cat with dark brown, light brown patches, light brown on one ear, dark brown on other, dark gray tail tip, and green eyes</p>
+    <p><b>Emeraldblaze (Moss)&mdash;</b>gry she-cat with dark brown, light brown patches, light brown on one ear, dark
+        brown on other, dark gray tail tip, and green eyes</p>
 
     <p><b>Silverfeather (Mocha)&mdash;</b>white and black she-cat with one red eye and one blue eye</p>
 
-    <p><b>Talllizard (Flint)&mdash;</b>dark ginger tom with unusually long legs, a thin tail, long claws, and white markings that look like a lizard on left shoulder</p>
+    <p><b>Talllizard (Flint)&mdash;</b>dark ginger tom with unusually long legs, a thin tail, long claws, and white
+        markings that look like a lizard on left shoulder</p>
 
-    <p><b>Dewleaf (Vixen)&mdash;</b>gray tom with white paws and ginger specks on his face and tail, black tail, and green eyes</p>
+    <p><b>Dewleaf (Vixen)&mdash;</b>gray tom with white paws and ginger specks on his face and tail, black tail, and
+        green eyes</p>
     <p>&mdash;<b>Mate:</b> Whitestar</p>
 
-    <p><b>Tigersnow (Flint)&mdash;</b>ginger she-cat with black stripes on her back and tail, white tail tip, white cheeks, small white freckles on muzzle and ears, and grreen eyes</p>
+    <p><b>Tigersnow (Flint)&mdash;</b>ginger she-cat with black stripes on her back and tail, white tail tip, white
+        cheeks, small white freckles on muzzle and ears, and grreen eyes</p>
 
     <p><b>Slashclaw (Mossbreeze)&mdash;</b>small white tom</p>
 
-    <p><bLilacflower (Sage)>&mdash;</b>pale gray she-cat with violet eyes</p>
+    <p><b>Lilacflower (Sage)>&mdash;</b>pale gray she-cat with violet eyes</p>
 
     <p><b>Twighlightsky (Oak)&mdash;</b>black tabby she-cat with white muzzle, paws, chest, and tip of her tail.</p>
 
-    <p><b>&mdash;</b></p>
+    <h3 class="head3">Apprentices</h3>
 
-    <p><b>&mdash;</b></p>
+    <p><b>Shinepaw (Vixen)&mdash;</b>dark cream she-cat with amber eyes</p>
 
-    <p><b>&mdash;</b></p>
+    <h3 class="head3">Daylight Apprentices</h3>
 
-    <p><b>&mdash;</b></p>
+    <p><b>Hollypaw (Oak)&mdash;</b>black she-cat with dark green eyes and pale green collar</p>
 
-    <p><b>&mdash;</b></p>
+    <h3 class="head3">Kits</h3>
+
+    <p><b>Snowkit (Amber)&mdash;</b>white top with green eyes</p>
+
+    <p><b>Rainkit (Moss)&mdash;</b>fluffy dark gray she-cat with black and white, one white leg, one gray leg, one back
+        leg, white patch around eye, white tail, one pale blue eye, one glowing amber eye</p>
+
+    <p><b>Mudkit (Tall)&mdash;</b>male bobcat with amber eyes</p>
 </body>
