--- a/navigation.html
+++ b/navigation.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
-<html lang = "en" >
-	<head>
-		<meta charset = "utf-8" >
-		<title>Navigation</title>
-		<link rel = "stylesheet" type = "text/css" href = "https://leafpool243.github.io/roleplay/style.css" />
-	</head>
-	<body>
-		<div id = "navigation" >
-			<h2>Navigation</h2>
-			<p>
-                <a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay" >Home</a><br>
-                Clans<br>
-				&emsp;<a class = "nav_item" target = "_parent" href = "https://leafpool243.github.io/roleplay/clans/cloudclan" >CloudClan</a><br>
-			</p>
-		</div>
-	</body>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>Navigation</title>
+    <link rel="stylesheet" type="text/css" href="https://leafpool243.github.io/roleplay/style.css" />
+</head>
+
+<body>
+    <div id="navigation">
+        <h2>Navigation</h2>
+        <p>
+            <a class="nav_item" target="_parent" href="https://leafpool243.github.io/roleplay">Home</a><br>
+            Clans<br>
+            &emsp;<a class="nav_item" target="_parent"
+                href="https://leafpool243.github.io/roleplay/clans/cloudclan">CloudClan</a><br>
+        </p>
+    </div>
+</body>
+
 </html>
