--- a/clans/cloudclan.html
+++ b/clans/cloudclan.html
@@ -55,14 +55,14 @@
 
     <p><b>Dewleaf (Vixen)&mdash;</b>gray tom with white paws and ginger specks on his face and tail, black tail, and
         green eyes</p>
-    <p>&mdash;<b>Mate:</b> Whitestar</p>
+    <p>&emsp;<b>Mate:</b> Whitestar</p>
 
     <p><b>Tigersnow (Flint)&mdash;</b>ginger she-cat with black stripes on her back and tail, white tail tip, white
         cheeks, small white freckles on muzzle and ears, and grreen eyes</p>
 
     <p><b>Slashclaw (Mossbreeze)&mdash;</b>small white tom</p>
 
-    <p><b>Lilacflower (Sage)>&mdash;</b>pale gray she-cat with violet eyes</p>
+    <p><b>Lilacflower (Sage)&mdash;</b>pale gray she-cat with violet eyes</p>
 
     <p><b>Twighlightsky (Oak)&mdash;</b>black tabby she-cat with white muzzle, paws, chest, and tip of her tail.</p>
 
