--- a/navigation.html
+++ b/navigation.html
@@ -15,6 +15,8 @@
             Clans<br>
             &emsp;<a class="nav_item" target="_parent"
                 href="https://leafpool243.github.io/roleplay/clans/cloudclan">CloudClan</a><br>
+            &emsp;<a class="nav_item" target="_parent"
+                href="https://leafpool243.github.io/roleplay/clans/treeclan">TreeClan</a><br>
         </p>
     </div>
 </body>
