--- a/clans/treeclan.html
+++ b/clans/treeclan.html
@@ -22,3 +22,6 @@
     <p><b>Lonestar (Vixen)&mdash;</b>black tom with one ginger spot on back, yellow eyes</p>
     <p>&emsp;<b>Mate:</b> Twigheart (formerly)</p>
     <p>&emsp;<b>Kits:</b> Maplekit, Pinekit</p>
+
+    <h3 class="head3">Deputy</h3>
+    <p><b>Birdtail (Tall)&mdash;</b>fox colored tom with white spots along back, green eyes</p>
