--- a/clans/cloudclan.html
+++ b/clans/cloudclan.html
@@ -82,4 +82,7 @@
         leg, white patch around eye, white tail, one pale blue eye, one glowing amber eye</p>
 
     <p><b>Mudkit (Tall)&mdash;</b>male bobcat with amber eyes</p>
+    
 </body>
+
+</html>
