--- a/clans/treeclan.html
+++ b/clans/treeclan.html
@@ -17,7 +17,7 @@
     <h1 class="head1">TreeClan</h1>
 
     <h2 class="head2">Allegiances</h2>
-    
+
     <h3 class="head3">Leader</h3>
     <p><b>Lonestar (Vixen)&mdash;</b>black tom with one ginger spot on back, yellow eyes</p>
     <p>&emsp;<b>Mate:</b> Twigheart (formerly)</p>
@@ -25,3 +25,37 @@
 
     <h3 class="head3">Deputy</h3>
     <p><b>Birdtail (Tall)&mdash;</b>fox colored tom with white spots along back, green eyes</p>
+
+    <h3 class="head3">Medicine Cats</h3>
+    <p><b>Rosepetal (Cherry)&mdash;</b>light ginger she-cat with olive green eyes</p>
+
+    <p><b>Nightwhisker (Sage)&mdash;</b>black tom with amber eyes</p>
+
+    <h3 class="head3">Warriors</h3>
+
+    <p><b>Bluethorn (Mocha)&mdash;</b>blue gray she-cat with scar on leg</p>
+
+    <p><b>Fawnleap (Flint)&mdash;</b>brown she-cat with white leaf-shaped spots along her back and tail, green eyes</p>
+
+    <p><b>Snowstorm (Vixen)&mdash;</b>white she-cat with cream spots and green eyes</p>
+
+    <p>&emsp;<b>Apprentice:</b>Ridgepaw</p>
+
+    <p><b>Ivyclaw (Mossbreeze)&mdash;</b>gray-green tom</p>
+
+    <p><b>Deertail (Oak)&mdash;</b>light brown with white flecks, blue eyes</p>
+
+    <p><b>Palesong (Sage)&mdash;</b>pale yellow she-cat with blue eyes and white paws</p>
+
+    <p><b>Shadowfall (Oak)&mdash;</b>black she-cat with very dark blue eyes</p>
+
+    <p><b>Thrushwing (Amber)&mdash;</b>pale gray tom with dark markings everywhere and one green eye, one missing eye
+        that he lost in battle that he doesn&rsquo;t talk about.</p>
+
+    <h3 class="head3">Apprentices</h3>
+
+    <p><b>Ridgepaw (Flint)&mdash;</b>dark gray tom with bright yellow eyes, spiky fur, and a sturdy tail</p>
+
+</body>
+
+</html>
