--- a/navigation.html
+++ b/navigation.html
@@ -17,6 +17,8 @@
                 href="https://leafpool243.github.io/roleplay/clans/cloudclan">CloudClan</a><br>
             &emsp;<a class="nav_item" target="_parent"
                 href="https://leafpool243.github.io/roleplay/clans/treeclan">TreeClan</a><br>
+            &emsp;<a class="nav_item" target="_parent"
+                href="https://leafpool243.github.io/roleplay/clans/oceanclan">OceanClan</a><br>
         </p>
     </div>
 </body>
