--- a/clans/echoclan.html
+++ b/clans/echoclan.html
@@ -22,7 +22,9 @@
     <p><b>Echostar (Amber)&mdash;</b>small cream and brown tom with blue eyes</p>
 
     <h3 class="head3">Deputy</h3>
-    <p><b>Cloudfur (Tall)&mdash;</b></p>
+    <p><b>Cloudfur (Tall)&mdash;</b>light gray she-cat with white speckled fur and green eyes</p>
+    <p>&emsp;<b>Mate:</b>Rabbittail</p>
+    <p>&emsp;<b>Kits:</b> Spiderpaw, Stormpaw, Moonpaw</p>
 
     <h3 class="head3">Medicine Cat</h3>
     <p><b>Dappledleaf (Oak)&mdash;</b>tabby-calico she-cat with bright green eyes</p>
